--- a/index.css
+++ b/index.css
@@ -4,6 +4,7 @@
   padding: 0;
 }
  /* delete the above part */
+
 /* ziad product carousel start */
 
 .demo-product-container {
@@ -55,13 +56,10 @@
   margin: 0;
 }
 
-.subheading-concern, #subheading-product {
+#subheading-concern, #subheading-product {
   margin-top: 5px;
 }
 
-.no-slider-carousel-wrapper {
-  overflow: hidden;
-}
 
 .text-header {
   font-size: 18px;
@@ -77,11 +75,11 @@
   float: right;
 }
 
-.price-carousel-product .no-slider-item {
+.price-wrapper {
   text-align: center;
 }
 
-.price-carousel-product .no-slider-item p {
+.price-wrapper p {
   display: inline-block;
   text-align: center;
   margin-top: 1.5rem;
@@ -98,7 +96,7 @@
   color: #646464;
 }
 
-.learn-how-link .no-slider-item {
+.learn-more-wrapper {
   text-align: center;
 }
 
@@ -119,19 +117,10 @@ a#learn-how-btn {
   box-sizing: border-box;
 }
 
-.carousel-product-list, .no-slider-carousel-list {
+.carousel-product-list {
   -webkit-transform-style: preserve-3d;
   -moz-transform-style: preserve-3d;
   transform-style: preserve-3d;
-}
-
-.no-slider-item {
-  opacity: 0;
-  position: absolute;
-  top:0;
-  width: 100%;
-  margin: auto;
-  z-index: 100;
 }
 
 .carousel-product {
@@ -146,18 +135,14 @@ a#learn-how-btn {
 }
 
 .carousel-product.initial,
-.carousel-product.active,
-.no-slider-item.initial,
-.no-slider-item.active {
+.carousel-product.active {
   opacity: 1;
   position: relative;
   z-index: 900;
 }
 
 .carousel-product.previous-product,
-.carousel-product.next-product,
-.no-slider-item.previous-product,
-.no-slider-item.next-product {
+.carousel-product.next-product {
   z-index: 800;
 }
 
