--- a/index.css
+++ b/index.css
@@ -132,6 +132,12 @@ a#learn-how-btn {
   width: 100%;
   margin: auto;
   z-index: 100;
+  transition: transform .5s, opacity .5s, z-index .5s;
+}
+
+.carousel-product-list.super-active {
+  cursor: grabbing;
+  cursor: -webkit-grabbing;
 }
 
 .carousel-product {
@@ -210,6 +216,10 @@ a#learn-how-btn {
   width: 350px;
   height: auto;
   text-align: center;
+  pointer-events: none;
+  -webkit-user-select: none; /* Chrome/Safari */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE10+ */
 }
 
 @media screen and (max-width: 900px) {
