--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   margin: auto;
   display: flex;
   background: #dedede;
-  height: 600px;
+  height: 100%;
   position: relative;
 }
 
@@ -106,8 +106,8 @@
 }
 
 .single-product-slider img {
-  width: 100vw;
-  height: 600px;
+  width: 100%;
+  height: 100%;
   pointer-events: none;
   -webkit-user-select: none; /* Chrome/Safari */
   -moz-user-select: none; /* Firefox */
@@ -139,16 +139,17 @@
 .on-sale-tag {
   position: absolute;
   transform: rotate(-90deg);
-  top: 45px;
+  top: 51px;
   background: #135e4c;
-  padding: 5px 38px;
+  padding: 15px 38px;
   left: 30px;
   z-index: 10001;
 }
 
 .on-sale-tag p {
-  font-size: 1.2rem;
+  font-size: 18px;
   color: #ffffff;
+  margin: 0;
 }
 
 #slider-indicator-wrapper {
@@ -171,4 +172,56 @@
 
 .slider-pointer.active-slider {
   background-color: #387d6d;
+}
+
+@media screen and (max-width: 999px) {
+  .product-slider-navigator {
+    height: 35px;
+    bottom: 70px;
+    margin-left: 0;
+  }
+  .product-mini-des-wrapper {
+    top: calc(100% - 50px);
+    left: calc(50% - 195px);
+    text-align: center;
+  }
+  .on-sale-tag {
+    top: 27px;
+    background: #135e4c;
+    padding: 10px 16px;
+  }
+
+  .on-sale-tag p {
+    font-size: 14px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .product-slider-navigator {
+    bottom: 30px;
+    margin-left: 0;
+  }
+  .product-mini-des-wrapper {
+    width: 250px;
+    left: calc(50% - 145px);
+    top: calc(100% - 20px);
+  }
+  .on-sale-tag {
+    top: 27px;
+    background: #135e4c;
+    padding: 10px 16px;
+  }
+
+  .on-sale-tag p {
+    font-size: 14px;
+  }
+
+  .product-title {
+    font-size: 16px;
+    font-weight: bold;
+  }
+
+  .short-description {
+    font-size: 14px;
+  }
 }
